# clicker-data-collector

./: .gitmodules  Cargo.toml  README.md  TODO.md  build.rs  jsconfig.json  pre.sh
.cargo/: config.toml  link-fix.bat
.gitea/: Dockerfile
.gitea/workflows/: ci.yaml  push_request.yaml  windows.yaml
.github/workflows/: x86_64-pc-windows-gnu.yaml
src/: clicker.rs  clicker_controller.rs  clicker_interface.rs  config.rs  data_model.rs  data_point.rs  fake_clicker.rs  lib.rs
src/protobuf/: messages.rs  mod.rs  pb_error.rs  protobuf_md_codec.rs
typescript-converter-macro/: Cargo.toml
typescript-converter-macro/src/: lib.rs
