[package]
name = "typescript-converter-macro"
version = "0.1.0"
edition = "2021"
authors = ["ololoshka2871"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"

swc = { version = "0.273.9", default_features = false, features = ["debug"] }   # Компиляция TypeScript в JavaScript, Сборка бандла
swc_common = "0.33.18"
swc_ecma_ast = "0.112.4"
swc_ecma_parser = "0.143.5"
swc_ecma_transforms_typescript = "0.188.8"
swc_ecma_visit = "0.98.4"
